--- a/SalusFarmaceutica/templates/index.html
+++ b/SalusFarmaceutica/templates/index.html
@@ -72,7 +72,7 @@
                     <img src={{"../static/" + product.img}} alt={{product.name}}>
                     <h2>{{ product.name }}</h2>
                     <p>R$ {{  "%.2f"|format(product.price) }}</p>
-                    <a href="{{ url_for('add_to_cart', product_id=product.id) }}" class="btn-buy">Adicionar a Cesta</a>
+                    <a href="{{ url_for('add_to_cart', product_id=product.id, tela='index') }}" class="btn-buy">Adicionar a Cesta</a>
                 </div>
                 {% endfor %}
         </section>
@@ -86,7 +86,7 @@
                     <img src={{"../static/" + product.img}} alt={{product.name}}>
                     <h2>{{ product.name }}</h2>
                     <p>R$ {{  "%.2f"|format(product.price) }}</p>
-                    <a href="{{ url_for('add_to_cart', product_id=product.id) }}" class="btn-buy">Adicionar a Cesta</a>
+                     <a href="{{ url_for('add_to_cart', product_id=product.id, tela='index') }}" class="btn-buy">Adicionar a Cesta</a>
                 </div>
                 {% endfor %}
             </div>
