--- a/SalusFarmaceutica/templates/cart.html
+++ b/SalusFarmaceutica/templates/cart.html
@@ -26,7 +26,26 @@
         {% endif %}
       </div>
       <div id="cart-payment">
-        total: {{total}}
+        <div id="totalValor">
+         <p class="carrinhoTotal">total: {{total}}</p>
+         
+        </div>
+        <div id="pagamento">
+          <input type="radio" id="cartao" name="fav_language" value="HTML">
+          <label class="txtPag" for="cartao">Cartão de debito/crédito</label><br>
+          <input type="radio" id="pix" name="fav_language" value="CSS">
+          <label class="txtPag" for="pix">Pix</label><br>
+          <input type="radio" id="boleto" name="fav_language" value="CSS">
+          <label class="txtPag" for="boleto">Boleto</label><br>
+        </div>
+        <div id="cep">
+          <p class="cepInput">Digite seu cep para caucular o frete</p>
+          <input class="cepInput2" type="text" id="cep" placeholder="Digite seu cep">
+          <input class="cepbtn"type="button" id="cepbtn" onclick="calccep()" value="calcular">
+        </div>
+        <div>
+          <input class="btnPagar" type="button" id="btnpagar" onclick="pagar()" value="comprar😀">
+        </div>
       </div>
     </div>
   </main>
