--- a/SalusPython-main/SalusPython-main/SalusFarmaceutica/static/index.css
+++ b/SalusPython-main/SalusPython-main/SalusFarmaceutica/static/index.css
@@ -144,6 +144,49 @@ header{
 	text-align:center
 }
 
+.produto-promotion{
+    flex: 1 0 250px;
+    max-width: 340px;
+	height:380px;
+	background-color:rgba(0,0,0,0.1);
+	border-radius:10px;
+	text-align:center
+}
+
+.produto-promotion img{
+    margin-top:25px;
+    height: 180px;
+}
+
+.produto-promotion h2{
+    width: 85%;
+    margin:auto;
+    margin-top:30px;
+    font-size: 1.1rem;
+    font-weight: 100;
+
+    overflow: hidden;
+   display: -webkit-box;
+   -webkit-line-clamp: 1; /* number of lines to show */
+           line-clamp: 1;
+   -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
+.produto-promotion p{
+    bottom:20px;
+    font-size: 1.8rem;
+    margin-top: 10px;
+    color:green;
+}
+
+.produto-promotion .price-original{
+    bottom:20px;
+    font-size: 1rem;
+    margin-top: 10px;
+    text-decoration: line-through;
+    color:red;
+}
+
 .produto img{
     margin-top:25px;
     height: 180px;
@@ -166,6 +209,12 @@ header{
 .produto p{
     bottom:20px;
     font-size: 1.8rem;
+    margin-top: 10px
+}
+
+.produto .price-original{
+    bottom:20px;
+    font-size: 1rem;
     margin-top: 10px
 }
 
